Us -> issues (#104)
* intialise US59 first visual

* the attachment(img) appears under the card profile

* return of US47 add logo on navbar

* test add hotspot for image on card

* hotspot visual picture

* resolve bug distance

* resolve bug distance

* no

* add menu hamburger beta

* responvise and design genéral 1

* modif cadre and link to hamburger menu

* modifi

* again and again details

* add link deconnexion

* add link deconnexion

* add link deconnexion .

* Update layout.html.twig

* correction des issues

* Update profile.html.twig

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -449,6 +449,7 @@ font-family: verdana;
   margin:3REm;
   background-color: antiquewhite;
   font-size: xx-large;
+  color:black;
   
 }
 
@@ -623,7 +624,7 @@ font-family: verdana;
   height: 200px;
 }
 .nav {
-  margin-left:-200px;
+  margin-left:-210px;
   transition-duration: 0.2s;
   position:fixed;
   top:0;
